# ucc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  default.nix  flake.nix  package.nix  ucc.spec
debian/: changelog  control  copyright  rules  ucc.install  ucc.lintian-overrides
libucc-dbus/: CMakeLists.txt  CommonTypes.hpp  UccdClient.cpp  UccdClient.hpp
nix/: nixos-module.nix
ucc-gui/: CMakeLists.txt
ucc-gui/inc/: AssignKeyZones.hpp  ColorPickerWidget.hpp  DashboardTab.hpp  DetectLayout.hpp  FanControlTab.hpp  FanCurveEditorWidget.hpp  HardwareTab.hpp  KeyboardVisualizerWidget.hpp  LCTWaterCoolerController.hpp  MainWindow.hpp  ProfileManager.hpp  PumpCurveEditorWidget.hpp  SystemMonitor.hpp
ucc-gui/qml/: FanControlTab.qml  FanCurveEditor.qml  main.qml
ucc-gui/src/: AssignKeyZones.cpp  DashboardTab.cpp  DetectLayout.cpp  FanControlTab.cpp  FanCurveEditorWidget.cpp  HardwareTab.cpp  KeyboardTab.cpp  KeyboardVisualizerWidget.cpp  LCTWaterCoolerController.cpp  MainWindow.cpp  ProfileManager.cpp  PumpCurveEditorWidget.cpp  SystemMonitor.cpp  main.cpp
ucc-tray/: CMakeLists.txt  main.cpp  ucc-tray.desktop
ucc-tray/qml-prototype/: CMakeLists.txt  DashboardTab.qml  HardwareTab.qml  PerformanceTab.qml  README.md  main.cpp  main.qml
ucc-widgets/: CMakeLists.txt
ucc-widgets/profile-switcher/package/: metadata.desktop
ucc-widgets/profile-switcher/package/contents/ui/: main.qml
ucc-widgets/system-monitor/package/: metadata.desktop
ucc-widgets/system-monitor/package/contents/ui/: SystemMetricsProvider.qml  main.qml
uccd/: .gitignore  CMakeLists.txt  com.uniwill.uccd.conf  com.uniwill.uccd.service  uccd-sleep.service  uccd.service
uccd/inc/: AutosaveManager.hpp  CpuController.hpp  FnLockController.hpp  PowerSupplyController.hpp  ProfileManager.hpp  SettingsManager.hpp  StateUtils.hpp  SysfsNode.hpp  TccSettings.hpp  UccDBusService.hpp  Utils.hpp
uccd/inc/profiles/: DefaultProfiles.hpp  FanProfile.hpp  UccProfile.hpp
uccd/inc/workers/: CpuWorker.hpp  DaemonWorker.hpp  DisplayWorker.hpp  FanControlWorker.hpp  HardwareMonitorWorker.hpp  KeyboardBacklightListener.hpp  LCTWaterCoolerWorker.hpp  ProfileSettingsWorker.hpp
uccd/src/: UccDBusService.cpp  uccd.cpp
uccd/src/profiles/: DefaultProfiles.cpp  FanProfiles.cpp  UccProfile.cpp
uccd/src/workers/: DisplayWorker.cpp  HardwareMonitorWorker.cpp  KeyboardBacklightListener.cpp  LCTWaterCoolerWorker.cpp  ProfileSettingsWorker.cpp
